# sdl2_flappy_bird

./: .gitignore  CMakeLists.txt  run.sh
src/: common.h  defs.h  draw.c  draw.h  game.c  game.h  init.c  init.h  input.c  input.h  main.c  main.h  structs.h  texture.c  texture.h
